--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-bcrypt = "*"
 pymysql = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+cryptography = "*"
 
 [requires]
 python_version = "3.8"
