--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ pymysql = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
 cryptography = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.8"
